Pre finnaly edits

--- a/home/home.html
+++ b/home/home.html
@@ -42,9 +42,6 @@
           <div style="padding-top: 20px; color:#f2ea00; font-weight:600; width:1200px; font-size: 32px">
             <span>ОБСЛУЖИВАНИЕ, СОПРОВОЖДЕНИЕ, ПОДДЕРЖКА, НАСТРОЙКА, ОБНОВЛЕНИЕ ПРОГРАММ 1С</span>
           </div>
-          <div>
-            <a style="top: 5vh; font-size: 18px" href="#" class="btn akame-btn">Задать вопрос</a>
-          </div>
         </div>
     </div>
   </div>
@@ -63,28 +60,28 @@
       <p>
         Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.
       </p>
+      <p>
+        Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса.
+      </p>
+      <p>
+        Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.
+      </p>
     </div>
   </div>
 
-  <div>
-    <div class="image-box ">
-      <div class="into-image-box">
-        <p>Программы на платформе 1С обладают широким функционалом и способны закрыть практически любую типовую потребность современного бизнеса. Если вам необходим функционал, который вы не можете найти в типовом решении 1С, возникает необходимость доработать базу или конфигурацию программы.</p>
-      </div>
+<div id="after-header" class="container-list">
+  <div class="inner-after-class">
+    <h2 style="text-align: center;"><span>Такие доработки могут понадобиться:</span></h2>
+    <div class="choose-us-content mt-30 mb-80">
+        <ul>
+            <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас сложный учет и/или нестандартные операции;</li>
+            <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вы хотите дополнительные формы отчетности;</li>
+            <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите настроить под свои особенности документооборот и печатные формы;</li>
+            <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите изменить внешний вид документов, журналов и справочников;</li>
+            <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас особенная система безопасности и предоставления доступов;</li>
+            <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вам необходима интеграция со сторонним программным обеспечением или загрузка-выгрузка данных.</li>
+        </ul>
     </div>
-  </div>
-
-<div class="container-list">
-  <h2 style="text-align: center;"><span style="font-size: 18pt;">Такие доработки могут понадобиться:</span></h2>
-  <div class="choose-us-content mt-30 mb-80">
-      <ul>
-          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас сложный учет и/или нестандартные операции;</li>
-          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вы хотите дополнительные формы отчетности;</li>
-          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите настроить под свои особенности документооборот и печатные формы;</li>
-          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если вы хотите изменить внешний вид документов, журналов и справочников;</li>
-          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если у Вас особенная система безопасности и предоставления доступов;</li>
-          <li><i class="fa fa-check-square-o" aria-hidden="true"></i> Если Вам необходима интеграция со сторонним программным обеспечением или загрузка-выгрузка данных.</li>
-      </ul>
   </div>
 </div>
 
@@ -154,7 +151,7 @@
 </div>
 </div>
 
-<div class="container-analog">
+<div class="container-analog" style="padding: 10px;">
   <p>
     Все работы выполняем быстро, качественно и в короткие сроки.
     Предоставляем гарантию на абсолютно все виды работ.
