--- a/home/index.html
+++ b/home/index.html
@@ -55,10 +55,10 @@
       <p>
         Прогрессивная IT - компания, официальный франчайзи фирмы «1С».
       </p> 
-      <p>
-          Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны.
+      <p style="white-space: nowrap;">
+        Мы предоставляем полный комплекс услуг по продаже, внедрению и сопровождению 1С в любой точке страны.
       </p>
-      <p>
+      <p style="white-space: nowrap;">
         Успешно работаем с компаниями из различных отраслей — от небольших фирм до крупных холдингов.
       </p>
       <p>
@@ -93,7 +93,7 @@
     <tbody>
       <tr>
         <td>
-          <p><strong>Первоначальная</strong><br> установка и настройка программ 1С</p>
+          <p>Первоначальная установка и настройка программ 1С</p>
         </td>
         <td>
           <p>от 1 часа</p>
@@ -101,7 +101,7 @@
       </tr>
       <tr>
         <td>
-          <p><strong>Обновление 1С</strong></p>
+          <p>Обновление 1С</p>
         </td>
         <td>
           <p>от 0,5 часа</p>
@@ -109,7 +109,7 @@
       </tr>
       <tr>
         <td>
-          <p><strong>Создание</strong><br> обработок и отчётов 1С</p>
+          <p>Создание обработок и отчётов 1С</p>
         </td>
         <td>
           <p>от 2 часов</p>
@@ -117,7 +117,7 @@
       </tr>
       <tr>
         <td>
-          <p><strong>Доработка и создание</strong><br> новых печатных форм</p>
+          <p>Доработка и создание новых печатных форм</p>
         </td>
         <td>
           <p>от 1 часа</p>
@@ -125,7 +125,7 @@
       </tr>
       <tr>
         <td>
-          <p><strong>Настройка обменов</strong><br> перенос данных между базами</p>
+          <p>Настройка обменов перенос данных между базами</p>
         </td>
         <td>
           <p>от 2 часов</p>
@@ -133,7 +133,7 @@
       </tr>
       <tr>
         <td>
-          <p><strong>Настройка прав доступа</strong></p>
+          <p>Настройка прав доступа</p>
         </td>
         <td>
           <p>от 1 часа</p>
@@ -141,7 +141,7 @@
       </tr>
       <tr>
         <td>
-          <p><strong>Исправление ошибок, оптимизация 1С</strong></p>
+          <p>Исправление ошибок, оптимизация 1С</p>
         </td>
         <td>
           <p>от 1 часа</p>
@@ -154,16 +154,20 @@
 
 <div class="container-analog" style="padding: 10px;">
   <p>
-    Все работы выполняем быстро, качественно и в короткие сроки.
-    Предоставляем гарантию на абсолютно все виды работ.
+    <b>Все работы выполняем быстро, качественно и в короткие сроки.
+    Предоставляем гарантию на абсолютно все виды работ.</b>
   </p>
 </div>
 
 <div class="image-box">
-  <div class="into-image-box">
+  
+  <div style="margin-left: 30vh;padding: 20px 0px 0px 20px;">
     <p>
-      Свяжитесь с нами!
+      <b>Наши контакты: почта freesupport1c@yandex.ru, тел. 8-951-427-2512</b>
     </p>
+  </div>
+  <div class="into-image-box">
+    <p>Задайте вопрос или опишите вашу задачу:</p>
     <div>
       <form id="form104939261" name="form104939261" role="form" method="POST" data-formactiontype="2" data-inputbox=".t-input-group" data-success-url="http://axelsoft.ru" class="t-form js-form-proccess t-form_inputs-total_4 " data-success-callback="t698_onSuccess">
         <div class="t-form__inputsbox"> 
@@ -172,18 +176,13 @@
               <input type="text" name="Email" class="t-input js-tilda-rule " value="" placeholder="E-mail" data-tilda-rule="email" style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;">
             </div> 
           </div>
-          <div class="t-input-group t-input-group_ph" data-input-lid="1495646545048"> 
-            <div class="t-input-block"> 
-              <input type="tel" name="Phone" class="t-input js-tilda-rule " value="" placeholder="Телефон" data-tilda-req="1" data-tilda-rule="phone" pattern="[0-9]*" style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;"> 
-            </div>
-           </div> 
            <div class="t-input-group t-input-group_nm" data-input-lid="1495646567135"> 
            <div class="t-input-block"> 
             <input type="text" name="Name" class="t-input js-tilda-rule " value="" placeholder="Имя" data-tilda-rule="name" style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;">
             </div> 
           </div> 
           <div class="t-input-group t-input-group_ta" data-input-lid="1542634927935"> 
-            <div class="t-input-title t-descr t-descr_md" data-redactor-toolbar="no" field="li_title__1542634927935" style="padding-top: 10px;">Комментарии</div>
+            <div class="t-input-title t-descr t-descr_md" data-redactor-toolbar="no" field="li_title__1542634927935" style="padding-top: 10px;">Сообщение</div>
              <div class="t-input-block"> 
               <textarea name="Комментарии" class="t-input js-tilda-rule " style="color:#000000; background-color:#ffffff; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px;height:80px" rows="3">
               </textarea> 
@@ -191,7 +190,7 @@
           </div>
           <div class="t-form__submit" style="padding-top: 20px;"> 
             <button type="submit" class="t-submit" style="color:#ffffff;background-color:#ff7300;border-radius:7px; -moz-border-radius:7px; -webkit-border-radius:7px;">
-              Отправить заявку
+              Отправить
             </button> 
           </div>
          </div>
